<resources>
    <string name="app_name">arbolillov3</string>
    <string name="login">Ingresar</string>
    <string name="login_clave">Clave</string>
    <string name="title_activity_nav">navActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login_password">Contraseña</string>s

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_logut">Salir</string>
    <string name="form_diametro">Diametro basal</string>
    <string name="form_altura">Altura total</string>
    <string name="form_altura_copa">Altura de copa</string>
    <string name="form_area">Area de copa</string>
    <string name="form_calle">Calle</string>
    <string name="form_nombre_comun">Nombre común</string>
    <string name="form_imagen">Cargar imagen</string>
    <string name="form_registrar">Registrar</string>

</resources>